Baja de proveedor lista.
Es un menu desplegable, el proveedor no se borra sino que se desactiva
en la base de datos.

--- a/gui/listas/listaProveedores.ui
+++ b/gui/listas/listaProveedores.ui
@@ -38,7 +38,7 @@
       </spacer>
      </item>
      <item row="2" column="0" colspan="2">
-      <widget class="QTableView" name="tbl_proveedores">
+      <widget class="ListadoProveedoresContextM" name="tbl_proveedores">
        <property name="palette">
         <palette>
          <active>
@@ -224,6 +224,13 @@ color: #FFFFFF;
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ListadoProveedoresContextM</class>
+   <extends>QTableView</extends>
+   <header>widgets.table_views.listado_proveedores</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>tbl_proveedores</tabstop>
  </tabstops>
